--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "lib/ve"]
 	path = lib/ve
-	url = https://gerrit.wikimedia.org/r/VisualEditor/VisualEditor.git
+	url = git@github.com:wikimedia/VisualEditor.git
+	branch = REL1_38
